# pdf-to-md

./: .gitignore  Dockerfile  PRD.md  docker-compose.yml  pyproject.toml
.claude/: hooks  rules  skills
.codex/: settings.json
.github/workflows/: deploy.yml
scripts/smithers-build/: agents.ts  config.ts  package.json  preload.ts  run.sh  smithers.ts  tsconfig.json  types.d.ts  workflow.tsx
scripts/smithers-build/components/: FinalReview.tsx  Implement.tsx  Review.tsx  Test.tsx
scripts/smithers-build/db/: schemas.ts
scripts/smithers-build/patches/: smithers-orchestrator@0.6.0.patch
scripts/smithers-build/steps/: final-review.mdx  implement.mdx  review.mdx  test.mdx
src/pdf2md/: __init__.py  cache.py  config.py  converter.py  downloader.py  formula_ocr.py  landing.py  main.py
tests/: __init__.py  test_cache.py  test_config.py  test_converter.py  test_downloader.py  test_formula_ocr.py  test_routes.py
